k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dos-game
  labels:
    istio-injection: enabled
