k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: dos-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        version: "17"
        
    spec:
      containers:
      - name: postgres
        image: postgres:17-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dos-game
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
