k8s/game-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: dos-game
spec:
  type: ClusterIP
  selector:
    app: dos-game
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
